JumpScript/tests/baselines/reference/varAndFunctionShareName.errors.txt
tests/cases/compiler/varAndFunctionShareName.jump(1,5): error TS2300: Duplicate identifier 'myFn'.
tests/cases/compiler/varAndFunctionShareName.jump(2,10): error TS2300: Duplicate identifier 'myFn'.


==== tests/cases/compiler/varAndFunctionShareName.jump (2 errors) ====
    var myFn;
        ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.
    function myFn(): any { }
             ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.